--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,17 +6,17 @@
 <div class="row">
   <div class="col-md-4">
     <h2>Create and share Markdown Wikis</h2>
-    <button>Sign up</button>
+    <button class="btn-primary">Sign up</button>
   </div>
 </div>
 <div class="row">
   <div class="public">
     <h2>Create as many public wikis as you want!</h2>
-    <button>Free Plan</button>
+    <button class="btn-success">Free Plan</button>
   </div>
   <div class="premium">
     <h2>Create private wikis!</h2>
-    <button>Premium Plan</button>
+    <button class="btn-success">Premium Plan</button>
   </div>
 </div>
 </div>
