--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,9 @@
 <div class="row">
   <div class="col-md-4">
     <h2>Create and share Markdown Wikis</h2>
-    <button class="btn-primary">Sign up</button>
+    <% if !user_signed_in? %>
+      <button><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %></button>
+    <% end %>
   </div>
 </div>
 <div class="row">
