CRUD capabilities added for public wikis

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="public">
     <h2>Create as many public wikis as you want!</h2>
-    <button class="btn-success">Free Plan</button>
+    <%= link_to "Create New Wiki", new_wiki_path, class: 'btn btn-success' %>
   </div>
   <div class="premium">
     <h2>Create private wikis!</h2>
