--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,24 @@
         <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
       <% end %>
     </ul>
-<%= yield %>
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li class="pull-right"><%= link_to "Blocipedia", root_path %></li>
+      <li class="pull-right"><%= link_to "Wikis", wikis_path %></li>
+    </ul>
+  </div>
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+    <%= yield %>
   </div>
 
 </body>
