--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,7 +25,7 @@
       <h2>Sign up for Premium to create private wikis!</h2>
       <%= link_to "Sign Up For Premium", new_charge_path, class: 'btn btn-success' %>
     <% elsif current_user.premium? || current_user.admin?%>
-      <h2>Create a wiki that only you can see!</h2>
+      <h2>Create a private wiki!</h2>
       <%= link_to "Create Private Wiki", new_wiki_path, class: 'btn btn-success' %>
     <% end %>
   </div>
