--- a/app/views/collaborators/_collaborator.erb
+++ b/app/views/collaborators/_collaborator.erb
@@ -1,24 +1,29 @@
 <% if current_user.admin? || current_user.id == @wiki.user_id %>
   <h2>Current Collaborators</h2>
-    <%= @wiki.users.each do |x| %>
+    <% @wiki.users.each do |x| %>
       <div class="collaborators">
         <%= x.email %>
       </div>
     <% end %>
   <h2>Add Collaborator?</h2>
-  <%= form_for Collaborator.new do |f| %>
-    <%= User.all.each do |user| %>
-      <%= f.hidden_field :wiki_id, value: @wiki.id %>
-       <%= f.hidden_field :user_id, value: user.id %>
-      <div class="user">
+  <% User.all.each do |user| %>
+    <%= form_for Collaborator.new do |f| %>
+      <div class="form=group">
         <%= user.email %>
+        <%= f.hidden_field :wiki_id, value: @wiki.id %>
+        <%= f.hidden_field :user_id, value: user.id %>
       </div>
       <% if !@wiki.users.include?(user) %>
-        <div class="form-group">
+        <div class="form=group">
           <%= f.submit "Add As Collaborator", class: 'btn btn-success' %>
         </div>
+      <% elsif @wiki.users.include?(user) %>
+      <% Collaborator.all.each do |collaborator| %>
+        <div class="form=group">
+          <%= link_to "Remove", collaborator_path(collaborator.id), method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to remove this collaborator?'} %>
+        </div>
       <% end %>
-
+      <% end %>
     <% end %>
   <% end %>
 <% end %>
