--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -22,5 +22,5 @@
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
-      <%= render partial: 'collaborators/collaborator', locals: {wiki: @wiki} %>
+      <%= render partial: 'collaborators/collaborator' %>
   </div>
