--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <br>
 <div class="jumbotron">
-  <h1>Blocipedia</h1>
-  <p>Social, Markdown Wikis</p>
+  <h1>Geekipedia</h1>
+  <p>Social, Markdown Wikis about your favorite geeky obsessions</p>
 </div>
 <div class="row">
   <div class="col-md-4">
